# atlas

./: .dockerignore  .env.example  .gitignore  ANONYMIZATION_MANUAL_TESTING.md  ANONYMIZATION_PROGRESS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCKER_IMPLEMENTATION_SUMMARY.md  Dockerfile  LICENSE  PR_DESCRIPTION.md  README.md  RELEASE_NOTES.md  SECURITY.md  atlas.toml.example  docker-compose.yml  docker-push.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
docs/: README.md  anonymization-user-guide.md  architecture.md  azure-log-analytics-setup.md  configuration.md  developer-guide.md  docker-setup.md  postgresql-setup.md  user-guide.md
docs/deployment/: docker.md  kubernetes.md  standalone.md
docs/refactoring/: feature-30-summary.md
examples/: README.md  atlas.better.example.toml  atlas.example.toml  atlas.postgresql.example.toml  incremental-sync.toml  logging_example.rs  ml-features.toml  research-export.toml
migrations/: 001_initial_schema.sql  README.md
patterns/: pii_patterns.toml
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/cosmosdb/: adapter.rs  bulk.rs  client.rs  mod.rs  models.rs
src/adapters/database/: factory.rs  mod.rs  traits.rs
src/adapters/openehr/: client.rs  mod.rs  models.rs
src/adapters/postgresql/: adapter.rs  client.rs  mod.rs  models.rs
src/anonymization/: config.rs  engine.rs  mod.rs  report.rs
src/anonymization/anonymizer/: mod.rs  redaction.rs  tokenization.rs
src/anonymization/audit/: logger.rs  mod.rs
src/anonymization/compliance/: gdpr.rs  hipaa.rs  mod.rs
src/anonymization/detector/: mod.rs  regex.rs
src/anonymization/models/: mod.rs  pii_entity.rs
src/cli/: mod.rs
src/cli/commands/: export.rs  init.rs  mod.rs  status.rs  (+1 more)
src/config/: loader.rs  mod.rs  schema.rs  secret.rs
src/core/: mod.rs
src/domain/: composition.rs  context.rs  ehr.rs  errors.rs  ids.rs  mod.rs  result.rs  template.rs
src/logging/: azure.rs  mod.rs  structured.rs
tests/: anonymization_compliance_test.rs  anonymization_edge_cases_test.rs  anonymization_error_handling_test.rs  anonymization_integration_test.rs  config_integration_test.rs  dry_run_test.rs  graceful_shutdown_test.rs  integration_test.rs  logging_integration_test.rs
(+15 files in other folders)
